# Fail2ban-monitoring

./: .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .tool-versions  CODEOWNERS  Cargo.toml  Dockerfile  Dockerfile.mariadb  Dockerfile.postgres  Dockerfile.sqlite  Justfile  Makefile  README.md  config.yml  csf.txt  docker-compose.mariadb.yml  docker-compose.postgres.yml  docker-compose.sqlite.yml  docker-compose.yml  grafana.json  logs_sample.txt  pyproject.toml  requirements.txt  ruff.toml
.github/: dependabot.yaml
.github/workflows/: rust_ci.yml  rust_deployment.yml  rust_docker_deployment.yml  test.yml
database/mysql/: mysql_create.sql
database/sqlite/: sqlite_create.sql
grafana/dashboards/: fail2ban-dashboard.json
scripts/: start_test_databases.sh
src/: .env  fail2ban_output.sh  lib.rs  logging.rs  main.rs  script.py
src/cli/: args.rs
src/config/: configuration.rs
src/database/: driver.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs
src/f2b/: logs.rs  mod.rs  system.rs
src/fail2banmonitoring/: __init__.py  __main__.py
src/fail2banmonitoring/db/: config.py
src/fail2banmonitoring/fail2ban/: ban.py  log_parser.py
src/fail2banmonitoring/models/: base.py  ip.py
src/fail2banmonitoring/services/: ip.py
src/fail2banmonitoring/utils/: environment_variables.py  logs.py
tests/: test_end_to_end.py  test_end_to_end_mysql.py  test_end_to_end_postgres.py  test_end_to_end_sqlite.py
