[package]
name = "fail2banmonitoring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
tokio = { version = "1.33.0", features = ["macros", "rt", "rt-multi-thread"] }
