[package]
name = "fail2banmonitoring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
rayon = "1.8.0"
rust_decimal = "1.32.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
sqlx = { version = "0.7.2", features = ["postgres", "mysql", "sqlite", "runtime-tokio", "rust_decimal"] }
tokio = { version = "1.33.0", features = ["macros", "rt", "rt-multi-thread"] }
validator = { version = "0.16.1", features = ["derive"] }
