[project]
name = "fail2banmonitoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp[speedups]>=3.11.16",
    "mysqlclient>=2.2.7",
    "pydantic>=2.11.3",
    "sqlalchemy>=2.0.40",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["bandit>=1.8.3", "mypy>=1.15.0", "ruff>=0.11.5"]
