[project]
name = "fail2banmonitoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp[speedups]>=3.11.16",
    "pydantic>=2.11.3",
    "sqlalchemy[asyncio]>=2.0.40",
    "tenacity>=9.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "anyio>=4.9.0",
    "bandit>=1.8.3",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.5",
    "testcontainers>=4.10.0",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.30.0"]
mysql = ["aiomysql>=0.2.0", "cryptography>=44.0.2"]
sqlite = ["aiosqlite>=0.21.0"]
